# Proxmon

./: .env-example  .gitignore  INSTALL.md  LICENSE  README.md  proxmon.py  pyproject.toml  requirements.txt  styles.tcss  utils.py
proxmon/: __init__.py  main.py  styles.tcss  utils.py
