[project]
name = "proxmon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko>=3.5.1",
    "pip>=25.0.1",
    "psutil>=7.0.0",
    "python-dotenv>=1.0.1",
    "readchar>=4.2.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "textual>=2.1.2",
]
